# yamabiko-whisper

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
examples/: simple_transcribe.rs  streaming_mic.rs
src/: audio.rs  error.rs  hypothesis_buffer.rs  lib.rs  online_asr.rs
