[package]
name = "yamabiko-whisper"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Low-latency streaming speech recognition with whisper.cpp and LocalAgreement-2."
license = "MIT"
repository = "https://github.com/ayakashi-labs/yamabiko-whisper"
documentation = "https://docs.rs/yamabiko-whisper"
readme = "README.md"
keywords = ["whisper", "asr", "speech", "streaming", "local-agreement"]
categories = ["multimedia::audio", "api-bindings"]
exclude = [".cargo/"]

[features]
default = []
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
intel-sycl = ["whisper-rs/intel-sycl"]
metal = ["whisper-rs/metal"]
openblas = ["whisper-rs/openblas"]
openmp = ["whisper-rs/openmp"]
vulkan = ["whisper-rs/vulkan"]

[dependencies]
whisper-rs = "0.16.0"

[dev-dependencies]
anyhow = "1.0.102"
cpal = "0.17.3"
ctrlc = "3.5.2"
